Add main helper functions and send_mail script

--- a/crawling_automation.ipynb
+++ b/crawling_automation.ipynb
@@ -32,8 +32,24 @@
     "driver = webdriver.Chrome(chromedriver, chrome_options=options)\n",
     "driver.get(\"http:google.com\")\n",
     "\n",
-    "```"
+    "```\n",
+    "\n",
+    "Python 3.6 users on MacOS:  \n",
+    "Getting a `urllib.error.URLError: <urlopen error [SSL: CERTIFICATE_VERIFY_FAILED] certificate verify failed (_ssl.c:777)>` error related to `html = urllib.request.urlopen(url)` ?  \n",
+    "https://stackoverflow.com/questions/27835619/urllib-and-ssl-certificate-verify-failed-error/42334357#42334357  \n",
+    "\n",
+    "https://stackoverflow.com/questions/24398302/bs4-featurenotfound-couldnt-find-a-tree-builder-with-the-features-you-requeste\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
